# tractor

./: .CLAUDE.md  .gitattributes  .gitignore  .tractor.yml  CHANGELOG.md  Cargo.toml  CodeXPath.csproj  CodeXPath.sln  CodeXTractor.csproj  HANDOFF.md  Match.cs  OutputFormatter.cs  Program.cs  QueryEngine.cs  README.md  Taskfile.yml  XmlGenerator.cs  clippy.toml  semantic-smells.yaml  spec.yaml  tractor.yml  xee-fix-predicate-bug.patch
tractor/: Cargo.toml  build.rs  tractor-lint.yaml
tractor-core/: Cargo.toml
tractor-core/src/: declarative_set.rs  diagnostic.rs  files.rs  glob_match.rs  glob_pattern.rs  language_info.rs  lib.rs  normalized_path.rs  normalized_xpath.rs  parallel.rs  replace.rs  report.rs  rule.rs  source_utils.rs  unicode_safety.rs  wasm.rs  wasm_ast.rs  xot_builder.rs  xot_document_experiments.rs  xot_transform.rs  xpath_upsert.rs  xpath_xml_builder.rs
tractor-core/src/languages/: csharp.rs  env.rs  go.rs  ini.rs  java.rs  json.rs  markdown.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  toml.rs  tsql.rs  typescript.rs  yaml.rs
tractor-core/src/languages/json/: data.rs  mod.rs  syntax.rs
tractor-core/src/languages/yaml/: data.rs  mod.rs  syntax.rs
tractor-core/src/output/: colors.rs  formatter.rs  mod.rs  query_tree_renderer.rs  schema.rs  syntax_highlight.rs  xml_renderer.rs  xml_to_json.rs
tractor-core/src/parser/: config.rs  csharp.rs  mod.rs  raw.rs  semantic.rs  transform.rs  typescript.rs
tractor-core/src/parser/languages/: csharp.rs  go.rs  java.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs
tractor-core/src/render/: csharp.rs  json.rs  mod.rs  yaml.rs
tractor-core/src/xpath/: engine.rs  map_normalize.rs  match_result.rs  mod.rs
tractor-core/tests/: ast_diff_poc.rs  integration_tests.rs
tractor-parse/: Cargo.toml  Dockerfile
tractor-parse/.cargo/: config.toml
tractor-parse/src/: main.rs  output.rs  raw.rs
tractor-parse/src/semantic/: config.rs  csharp.rs  mod.rs
tractor/src/: cli.rs  executor.rs  file_resolver.rs  filter.rs  lib.rs  main.rs  matcher.rs  rule.rs  rules_config.rs  rules_toml.rs  tractor_config.rs  tree_mode.rs  version.rs  wasm.rs  xpath_upsert.rs  xpath_utils.rs
tractor/src/cli/: check.rs  config.rs  context.rs  help.rs  init.rs  languages.rs  mod.rs  projection.rs  query.rs  render.rs  run.rs  set.rs  test.rs  update.rs
tractor/src/executor/: check.rs  mod.rs  query.rs  set.rs  test.rs  update.rs
tractor/src/format/: claude_code.rs  gcc.rs  github.rs  json.rs  mod.rs  options.rs  project.rs  projection.rs  projection_render.rs  shared.rs  text.rs  xml.rs  yaml.rs
tractor/src/glob/: mod.rs
tractor/src/input/: file_resolver.rs  filter.rs  git.rs  mod.rs  plan.rs  source.rs
tractor/src/ir/: coverage.rs  csharp.rs  data.rs  data_to_json.rs  data_to_xot.rs  go_lang.rs  ini_data.rs  java.rs  json.rs  json_data.rs  lower_helpers.rs  markdown_data.rs  mod.rs  php.rs  python.rs  render.rs  ruby.rs  rust_lang.rs  to_json.rs  to_xot.rs  toml_data.rs  tsql.rs  types.rs  typescript.rs  yaml_data.rs
tractor/src/ir/source/: common.rs  csharp.rs  go_lang.rs  java.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  tsql.rs  typescript.rs
tractor/src/languages/: comments.rs  csharp.rs  env.rs  go.rs  ini.rs  java.rs  markdown.rs  mod.rs  php.rs  python.rs  ruby.rs  rule.rs  rust_lang.rs  toml.rs  tsql.rs  typescript.rs
tractor/src/languages/csharp/: input.rs  mod.rs  output.rs  post_transform.rs  rules.rs  semantic.rs  transform.rs  transformations.rs
tractor/src/languages/env/: input.rs  mod.rs  output.rs  rules.rs  transform.rs  transformations.rs
tractor/src/languages/go/: handlers.rs  input.rs  mod.rs  output.rs  post_transform.rs  rules.rs  semantic.rs  transform.rs  transformations.rs
tractor/src/languages/ini/: input.rs  mod.rs  output.rs  rules.rs  (+2 more)
tractor/src/model/: mod.rs  report.rs  rule.rs
tractor/src/modes/: check.rs  config.rs  languages.rs  mod.rs  query.rs  render.rs  run.rs  scan.rs  set.rs  test.rs  update.rs
tractor/src/mutation/: mod.rs  replace.rs  xpath_upsert.rs
tractor/src/output/: colors.rs  formatter.rs  mod.rs  query_tree_renderer.rs  schema.rs  source_utils.rs  syntax_highlight.rs  xml_renderer.rs  xml_to_json.rs
tractor/src/parser/: mod.rs  raw.rs
tractor/src/pipeline/: context.rs  files.rs  git.rs  input.rs  matcher.rs  mod.rs  query.rs  report_output.rs
tractor/src/render/: csharp.rs  java.rs  json.rs  mod.rs  python.rs  typescript.rs
tractor/src/transform/: builder.rs  chain_inversion.rs  conditionals.rs  data_keys.rs  generic_type.rs  mod.rs  operators.rs  shape_contracts.rs  singletons.rs
tractor/src/wasm/: ast.rs  mod.rs
tractor/src/xot/: builder.rs  mod.rs  transform.rs
tractor/src/xpath/: engine.rs  map_normalize.rs  match_result.rs  mod.rs
tractor/tests/: chain_inversion_emits.rs  cli.rs  core_integration_tests.rs  coverage_report.rs  data_to_json.rs  ir_csharp_json_parity.rs  ir_csharp_parity.rs  ir_go_missing_kinds.rs  ir_java_missing_kinds.rs  ir_php_missing_kinds.rs  ir_python_blueprint.rs  ir_python_missing_kinds.rs  ir_python_parity.rs  ir_ruby_missing_kinds.rs  ir_rust_missing_kinds.rs  ir_tsql_missing_kinds.rs  ir_typescript_missing_kinds.rs  kind_catalogue.rs  projection.rs  render_roundtrip.rs  semantic_tree.rs  shape_contracts.rs  source_lint.rs  text_preservation.rs  transform.rs  tree_invariants.rs
tractor/tests/cli/: common.rs  formats.rs  languages.rs  main.rs  run_cmd.rs  set.rs  string_input.rs  update.rs  view_modifiers.rs  xpath_expressions.rs
tractor/tests/support/: mod.rs  semantic.rs
tractor/tests/transform/: accessors.rs  calls.rs  chain.rs  collections.rs  comments.rs  csharp.rs  decorators.rs  errors.rs  flat_lists.rs  functions.rs  generics.rs  go.rs  if_else.rs  imports.rs  ini.rs  java.rs  literals.rs  loops.rs  markdown.rs  members.rs  modifiers.rs  operators.rs  parameters.rs  patterns.rs  python.rs  ruby.rs  rust.rs  strings.rs  toml.rs  tsql.rs  tsx.rs  types.rs  variables.rs  visibility.rs  xml.rs  yaml.rs
tractor/todo/: 30-architecture-reorganization.md  41-ir-migration-status.md
(+1171 files in other folders)
