[workspace]
resolver = "2"
members = [
    "tractor",
]

# Bump opt-level for dev/test profiles. Debug builds reserve stack
# space worst-case across all match arms; the IR renderer's
# `render_to_xot` is one giant 72-arm match that recurses, so
# debug-build frames grew large enough to overflow default 2 MiB
# thread stacks on the C# blueprint. opt-level = 1 enables stack-
# slot reuse and basic inlining without paying for full release-
# build time.
[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# TreeSitter
tree-sitter = "0.26"
tree-sitter-c-sharp = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-php = "0.23"
tree-sitter-scala = "0.23"
tree-sitter-lua = "0.4"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-r = "1.0"
tree-sitter-julia = "0.23"
tree-sitter-md = "0.5"
tree-sitter-toml-ng = "0.7"
tree-sitter-ini = "1.4"
tree-sitter-sequel-tsql = "0.4"

# XPath 3.1
# Fork pinned by SHA — see docs/workflow-xee-fork.md. Bump when `tractor` branch advances.
xee = { git = "https://github.com/boukeversteegh/xee.git", rev = "369f90e279a956425ff9dc0a755abc194699aefb" }
xee-xpath = { git = "https://github.com/boukeversteegh/xee.git", rev = "369f90e279a956425ff9dc0a755abc194699aefb" }
xot = "0.31"

# CLI and utilities
clap = { version = "4", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
atty = "0.2"
rayon = "1.10"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
regex = "1.10"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
strum = "0.26"
strum_macros = "0.26"

# Grammar patches (managed by: task grammar:patch)
[patch.crates-io]
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp" }
