[package]
name = "tractor-core"
version.workspace = true
edition.workspace = true
description = "Core library for tractor - multi-language code query tool"

[dependencies]
# TreeSitter
tree-sitter.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true
tree-sitter-json.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-php.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-ocaml.workspace = true
tree-sitter-r.workspace = true
tree-sitter-julia.workspace = true

# XPath 3.1
xee-xpath.workspace = true
xot.workspace = true

# Utilities
quick-xml.workspace = true
atty.workspace = true
glob.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
