[package]
name = "tractor-parse"
version = "0.1.0"
edition = "2021"
description = "TreeSitter-based multi-language parser for tractor toolchain"

[dependencies]
tree-sitter = "0.24"

# Language grammars - uncomment as needed
tree-sitter-c-sharp = "0.23"
# tree-sitter-javascript = "0.23"
# tree-sitter-typescript = "0.23"
# tree-sitter-python = "0.23"
# tree-sitter-go = "0.23"
# tree-sitter-rust = "0.23"

# CLI and XML
clap = { version = "4", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
atty = "0.2"
