[package]
name = "tractor"
version.workspace = true
edition.workspace = true
description = "Multi-language code query tool"

[[bin]]
name = "tractor"
path = "src/main.rs"

[[bin]]
name = "update-snapshots"
path = "src/bin/update_snapshots.rs"

[dependencies]
tractor-core = { path = "../tractor-core" }
clap.workspace = true
atty.workspace = true
rayon.workspace = true
num_cpus = "1.16"
serde_json.workspace = true
serde_yaml.workspace = true
toml = "0.8"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
